--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,4 +14,7 @@
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p>
+  <p>
+    我是否尝试成功！
+  </p>
 </ion-content>
