增加测试版本按钮

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -8,4 +8,7 @@
 
 <ion-content padding>
   <button ion-button color="danger" full (click)="update()">检查更新</button>
+  <button ion-button color="primary" full (click)="deviceInfo()">获取当前设备版本信息</button>
+  <button ion-button color="primary" full (click)="deviceDownInfo()">获取当前已下载版本</button>
+  <button ion-button color="primary" full (click)="checkInfo()">检查是否有更新</button>
 </ion-content>
